--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 
 <style>
 :root {
-  --background-image: url("https://cdn.discordapp.com/attachments/799015739973566545/1452978199649714289/Muffet.gif");
-  --avatar-image: url("https://cdn.discordapp.com/attachments/799015739973566545/1453008094337568899/Uno.png");
+  --background-image: url("https://cdn.discordapp.com/attachments/799015739973566545/1452978199649714289/Muffet.gif?ex=694bc6e5&is=694a7565&hm=28d4ca80a155b0c9f97a525b70ddd1406f4a56d492e7ef4dd8915fa3b08e5708&"); /* Ganti sesuai background */
+  --avatar-image: url("https://cdn.discordapp.com/attachments/799015739973566545/1453008094337568899/Uno.png?ex=694be2bd&is=694a913d&hm=2d4373533966d44de6acad6f1df329d26f45c25d5c8b7b5676dcb0ee8861a844&"); /* Ganti sesuai avatar */
   --name: "Foruxy";
   --tagline: "Vtuber Talent Manager • Discord Server Manager";
   --accent: #38bdf8;
@@ -17,29 +17,30 @@
 /* GLOBAL */
 *,
 body, .container, .link, .paper-box {
-  box-sizing:border-box;
-  font-family:"Comic Sans MS","Comic Sans",cursive;
+  box-sizing:border-box; 
+  font-family:"Comic Sans MS","Comic Sans",cursive; 
   cursor:none !important;
-  margin:0;
-  padding:0;
+  margin:0; 
+  padding:0; 
 }
 
 body{
   min-height:100vh;
   background: linear-gradient(rgba(0,0,0,.75), rgba(0,0,0,.75)), var(--background-image);
-  background-size:cover;
+  background-size:cover; 
   background-position:center;
-  display:flex;
-  justify-content:center;
+  display:flex; 
+  justify-content:center; 
   align-items:center;
-  color:#e5e7eb;
+  color:#e5e7eb; 
   overflow:hidden;
 }
 
 /* LOADING SCREEN */
-#loadingScreen{
+#loadingScreen {
   position:fixed;
-  inset:0;
+  top:0; left:0;
+  width:100%; height:100%;
   background:#020617;
   display:flex;
   flex-direction:column;
@@ -48,9 +49,9 @@ body{
   color:#38bdf8;
   font-size:2rem;
   z-index:99999;
-  transition:.5s;
+  transition: opacity 0.5s ease;
 }
-.bar-container{
+#loadingScreen .bar-container {
   width:60%;
   height:12px;
   border:2px solid #38bdf8;
@@ -58,144 +59,174 @@ body{
   margin-top:20px;
   overflow:hidden;
 }
-.bar{height:100%;width:0;background:#38bdf8}
+#loadingScreen .bar {
+  width:0%;
+  height:100%;
+  background:#38bdf8;
+  transition: width 0.1s linear;
+}
 
 /* CURSOR */
 .cursor{
-  position:fixed;
-  width:14px;height:14px;
+  position:fixed; 
+  width:14px; 
+  height:14px; 
   border-radius:50%;
-  background:#fff;
+  background:rgba(255,255,255,.9); 
   mix-blend-mode:difference;
-  pointer-events:none;
+  pointer-events:none; 
   z-index:9999;
   transform:translate(-50%,-50%);
-  transition:.2s;
+  transition: width .2s, height .2s, background .2s, border .2s;
 }
 .cursor.magnify{
-  width:48px;height:48px;
-  background:rgba(255,255,255,.15);
-  border:2px solid var(--accent);
-  backdrop-filter:blur(6px);
+  width:48px; 
+  height:48px; 
+  background:rgba(255,255,255,.15); 
+  border:2px solid var(--accent); 
+  backdrop-filter:blur(6px); 
 }
 
-/* MAIN MENU (UNCHANGED) */
+/* MAIN CONTAINER */
 .container{
-  width:100%;
-  max-width:380px;
-  padding:26px;
+  width:100%; 
+  max-width:400px; 
+  padding:30px; 
   text-align:center;
-  background:rgba(2,6,23,.85);
+  background:rgba(2,6,23,.85); 
   backdrop-filter:blur(16px);
-  border-radius:22px;
+  border-radius:22px; 
   border:1px solid rgba(255,255,255,.08);
-  box-shadow:0 30px 70px rgba(0,0,0,.8);
-  transform:translateY(100px);
+  box-shadow:0 30px 70px rgba(0,0,0,.8); 
+  position:relative; 
+  z-index:1;
+  transform: translateY(100px);
   opacity:0;
-  transition:.8s cubic-bezier(.25,1,.5,1);
+  transition: transform 0.8s cubic-bezier(0.25,1,0.5,1), opacity 0.8s ease;
 }
-.container.show{transform:none;opacity:1}
 
-.avatar-wrapper{
-  width:120px;height:120px;
-  margin:0 auto 18px;
-  padding:4px;
-  border-radius:50%;
-  background:conic-gradient(var(--accent),#0ea5e9,var(--accent));
+.container.show{
+  transform: translateY(0);
+  opacity:1;
 }
-.avatar{
-  width:100%;height:100%;
-  border-radius:50%;
-  border:3px solid #fff;
-  background:var(--avatar-image) center/cover;
+
+.avatar-wrapper{ 
+  width:120px; 
+  height:120px; 
+  margin:0 auto 18px; 
+  border-radius:50%; 
+  padding:4px; 
+  background:conic-gradient(var(--accent),#0ea5e9,var(--accent)); 
 }
+.avatar{ 
+  width:100%; 
+  height:100%; 
+  border-radius:50%; 
+  border:3px solid #fff; 
+  background-image: var(--avatar-image);
+  background-size:cover; 
+  background-position:center;
+}
+
+h1{margin:0;font-size:1.7rem;font-weight:600;}
+p{margin:8px 0 26px;font-size:.95rem;color:#94a3b8;}
+.bio-description{font-size:.9rem; line-height:1.4; color:#e5e7eb; margin-top:12px; text-align:left;}
 
 .link{
-  display:block;
-  padding:18px;
-  margin-bottom:16px;
-  border-radius:18px;
-  background:#0f172a;
-  color:#e5e7eb;
-  text-decoration:none;
+  display:block; padding:18px; margin-bottom:16px; border-radius:18px;
+  background:rgba(15,23,42,.95); color:#e5e7eb; text-decoration:none;
   border:1px solid rgba(255,255,255,.08);
-  transition:.3s;
+  transform:translateY(0) scale(1); transition: transform .3s, box-shadow .3s;
+  position:relative; cursor:pointer;
 }
-.link.hover{
-  transform:translateY(-3px) scale(1.03);
-  box-shadow:0 15px 40px rgba(56,189,248,.4);
-}
+.link.hover{ transform:translateY(-3px) scale(1.02); box-shadow:0 15px 40px rgba(56,189,248,.35); }
+.link span{ display:inline-block; font-weight:500; transition:transform .3s; }
+.link.zoom-text span{ transform:scale(1.2); }
 
-/* OVERLAY BOX (LARGE VERSION) */
+footer{margin-top:18px;font-size:.75rem;color:#64748b;}
+
+/* PAPER BOX */
 .paper-box{
-  position:fixed;
-  inset:0;
-  background:rgba(0,0,0,.55);
-  display:flex;
-  justify-content:center;
-  align-items:center;
-  opacity:0;
-  pointer-events:none;
-  transition:.3s;
-  z-index:2;
+  position:fixed; top:0; left:0; width:100%; height:100%;
+  display:flex; justify-content:center; align-items:center;
+  background: rgba(0,0,0,0.5);
+  z-index:2; opacity:0; pointer-events:none;
+  transition: opacity 0.3s ease;
 }
-.paper-box.active{opacity:1;pointer-events:auto}
+.paper-box.active{ opacity:1; pointer-events:auto; }
 
 .paper-box .box-content{
-  background:rgba(2,6,23,.95);
-  border-radius:26px;
-  padding:36px;
-  width:92%;
-  max-width:700px;
-  max-height:85vh;
-  overflow-y:auto;
-  backdrop-filter:blur(18px);
-  box-shadow:0 40px 90px rgba(0,0,0,.9);
-  transform:scale(.85);
-  transition:.3s;
+  background:rgba(2,6,23,.95); color:#e5e7eb;
+  border-radius:22px; padding:26px;
+  max-width:410px; width:100%;
+  box-shadow:0 30px 70px rgba(0,0,0,.8);
+  backdrop-filter:blur(16px);
+  transform: scale(0.8);
+  transition: transform 0.3s ease;
 }
-.paper-box.active .box-content{transform:scale(1)}
+.paper-box.active .box-content{ transform: scale(1); }
 
-.close-trigger{position:absolute;inset:0}
+.paper-box .close-trigger{
+  position:absolute; top:0; left:0; width:100%; height:100%; cursor:pointer;
+}
 
-/* MY WORK */
-#workContent{max-height:520px;overflow-y:auto}
+/* MY WORK STYLING */
+#workContent{
+  max-height: 400px; /* tinggi untuk 3 item */
+  overflow-y: auto;
+  padding-right: 8px;
+}
+#workContent::-webkit-scrollbar {
+  width: 6px;
+}
+#workContent::-webkit-scrollbar-thumb {
+  background-color: var(--accent);
+  border-radius: 3px;
+}
+#workContent::-webkit-scrollbar-track {
+  background: rgba(255,255,255,0.05);
+  border-radius: 3px;
+}
+
 .mywork-item{
   display:flex;
-  gap:20px;
-  background:rgba(56,189,248,.1);
+  gap:16px;
+  background: rgba(56,189,248,0.1);
   border:2px solid var(--accent);
-  border-radius:18px;
-  padding:16px;
-  margin-bottom:14px;
+  border-radius:16px;
+  padding:12px;
+  align-items:center;
+  margin-bottom:12px;
 }
 .mywork-image{
-  width:120px;height:120px;
-  border-radius:14px;
+  width:110px;
+  height:110px;
+  object-fit:cover;
+  border-radius:12px;
   border:2px solid var(--accent);
+  flex-shrink:0;
 }
-.mywork-desc{display:flex;flex-direction:column;gap:6px}
-.mywork-desc strong{color:var(--accent)}
-
-/* SOCIAL ICONS */
-.social-link{
+.mywork-desc{
   display:flex;
-  align-items:center;
-  gap:14px;
-  margin-bottom:14px;
+  flex-direction:column;
+  gap:6px;
+  color:#e5e7eb;
 }
-.social-link svg{
-  width:28px;height:28px;
-  fill:var(--accent);
+.mywork-name, .mywork-owner, .mywork-date{
+  font-size:0.95rem;
+}
+.mywork-name strong, .mywork-owner strong, .mywork-date strong{
+  color:var(--accent);
 }
 </style>
 </head>
-
 <body>
 
 <div id="loadingScreen">
   Loading...
-  <div class="bar-container"><div class="bar" id="loadingBar"></div></div>
+  <div class="bar-container">
+    <div class="bar" id="loadingBar"></div>
+  </div>
 </div>
 
 <div class="cursor"></div>
@@ -204,110 +235,183 @@ body{
   <div class="avatar-wrapper"><div class="avatar"></div></div>
   <h1 id="name"></h1>
   <p id="tagline"></p>
+
   <div id="links"></div>
+
   <footer>© 2025 <span id="footer-name"></span></footer>
 </div>
 
-<!-- ABOUT -->
+<!-- OVERLAY BOXES -->
 <div class="paper-box" id="aboutBox">
   <div class="close-trigger"></div>
   <div class="box-content">
     <div class="avatar-wrapper"><div class="avatar"></div></div>
-    <h1>Foruxy</h1>
-    <p>Vtuber Talent Manager • Discord Server Manager</p>
-    <p>
-      Hawrru~! I'm Foruxy, the Silver Catfox~<br>
-      I create & manage Vtuber communities, Discord servers, and YouTube moderation.<br>
-      Active since February 2025 with passion and care.
-    </p>
+    <h1 id="about-name"></h1>
+    <p id="about-tagline"></p>
+    <div class="bio-description">
+      Hawrru~! I'm Foruxy, the Silver Catfox~
+      I create Vtuber Discord servers, manage Vtuber communities, and moderate YouTube channels!
+      I also help as a Vtuber Advisor, Counselor, and Helper.
+      I began my journey since February 2025, I’m dedicated to supporting Vtubers and growing communities with creativity and care.
+    </div>
   </div>
 </div>
 
-<!-- WORK -->
 <div class="paper-box" id="workBox">
   <div class="close-trigger"></div>
   <div class="box-content" id="workContent"></div>
 </div>
 
-<!-- SOCIAL -->
 <div class="paper-box" id="socialBox">
   <div class="close-trigger"></div>
   <div class="box-content">
     <h1>Social Media</h1>
-
-    <a class="link social-link" href="https://www.instagram.com/foruxy_/" target="_blank">
-      📸 Instagram
-    </a>
-    <a class="link social-link" href="https://x.com/Foruxy" target="_blank">
-      ✖ X (Twitter)
-    </a>
-    <a class="link social-link" href="https://www.youtube.com/@Foruxy" target="_blank">
-      ▶️ YouTube
-    </a>
-    <a class="link social-link" href="https://discord.com/users/797770498745303092" target="_blank">
-      💬 Discord
-    </a>
+    <div class="bio-description" style="margin-top:12px;">
+      <a href="https://www.instagram.com/foruxy_/" target="_blank" class="link" style="margin-bottom:8px;"><span>📸 Instagram</span></a>
+      <a href="https://x.com/Foruxy" target="_blank" class="link" style="margin-bottom:8px;"><span>✖ Twitter</span></a>
+      <a href="https://www.youtube.com/@Foruxy" target="_blank" class="link" style="margin-bottom:8px;"><span>▶️ Youtube</span></a>
+      <a href="https://discord.com/users/797770498745303092" target="_blank" class="link" style="margin-bottom:8px;"><span>✉ Discord</span></a>
+    </div>
   </div>
 </div>
 
 <script>
 /* CONFIG */
-const CONFIG={
-  name:"Foruxy",
-  tagline:"Vtuber Talent Manager • Discord Server Manager",
-  links:[
-    {label:"✉ About Me",url:"#about"},
-    {label:"💼 My Work",url:"#work"},
-    {label:"🌐 Social",url:"#social"}
+const CONFIG = {
+  name: "Foruxy",
+  tagline: "Vtuber Talent Manager • Discord Server Manager",
+  links: [
+    { label: "✉ About Me", url: "#about" },
+    { label: "💼 My Work", url: "#work" },
+    { label: "🌐 Social", url: "#social" }
   ],
-  myWork:[
-    {image:"https://cdn.discordapp.com/icons/1391655093920727040/aff24dcc07ba0d7913693c536696ee31.png",name:"Yasei Pyon’s Zoological Society",owner:"Yasei Pyon",date:"07 July 2025"},
-    {image:"https://cdn.discordapp.com/icons/1431225172614054000/6db71b7db347b180f8ae28997a074631.png",name:"Hidden Peak ❄",owner:"Eseuri Krasu",date:"24 October 2025"}
+  myWork: [
+    { image: "https://cdn.discordapp.com/icons/1391655093920727040/aff24dcc07ba0d7913693c536696ee31.png", 
+     name: "Yasei Pyon’s Zoological Society", owner: "Yasei Pyon", date: "07 July 2025" },
+    { image: "https://cdn.discordapp.com/icons/1431225172614054000/6db71b7db347b180f8ae28997a074631.png", 
+     name: "Hidden Peak ❄", owner: "Eseuri Krasu", date: "24 October 2025" },
+    { image: "https://cdn.discordapp.com/icons/1416027689554411636/c9379598ef7930896143ec33a8e8b4e3.png", 
+     name: "World Of Usagi🐰", owner: "Firany", date: "12 September 2025" },
+    { image: "https://cdn.discordapp.com/icons/1449052821193232419/30f98d369cedebe200d852fce8323e63.png", 
+     name: "Kira's Aquarium🐟", owner: "Kira Maguro", date: "12 Desember 2025" },
+    { image: "https://cdn.discordapp.com/icons/792733470958551040/ffd45bb32ecb865a6851ebcfa8c39eaa.png", 
+     name: "Fowl Base", owner: "Foruxy", date: "27 Desember 2020" },
+    { image: "https://cdn.discordapp.com/icons/1437694080497877104/51b342307e2971b2c9a642166d6858ff.png", 
+     name: "(Private) Clanen's Fluffytopia🍭", owner: "Clara Nefia", date: "11 Juni 2025" },
+    { image: "https://cdn.discordapp.com/icons/1449407408081342526/51e73f36e5b8c60814ad27e1ddb9ab7e.png", 
+     name: "Amaryn Pastry Shop🎂", owner: "Amaryn", date: "21 Agustus 2025" },
+    { image: "https://cdn.discordapp.com/icons/1449766831710797826/748c5a036ff163c8bd67989f7a64b42b.png", 
+     name: "Kayce Pavilion", owner: "Kayce Lawrence", date: "14 Desember 2025" },
+    { image: "https://cdn.discordapp.com/icons/1405524507330084936/a48a0254bb1646c05e2bf2f782a4eb5f.png", 
+     name: "[ 𝓚.𝓐.𝓒 ]𝓚𝓪𝓲 𝓐𝔃𝓾𝓶𝓪 𝓒𝓸𝓶𝓶𝓾𝓷𝓲𝓽𝔂", owner: "Kaikaje", date: "14 Agustus 2025" }
   ]
 };
 
-/* INIT */
-name.textContent=CONFIG.name;
-tagline.textContent=CONFIG.tagline;
-footer-name.textContent=CONFIG.name;
+/* SETUP HALAMAN */
+document.getElementById("name").textContent = CONFIG.name;
+document.getElementById("tagline").textContent = CONFIG.tagline;
+document.getElementById("footer-name").textContent = CONFIG.name;
+document.getElementById("about-name").textContent = CONFIG.name;
+document.getElementById("about-tagline").textContent = CONFIG.tagline;
 
-/* LINKS */
-CONFIG.links.forEach(i=>{
-  const a=document.createElement("a");
+/* GENERATE LINKS */
+const linksContainer = document.getElementById("links");
+CONFIG.links.forEach(item=>{
+  const a = document.createElement("a");
   a.className="link";
-  a.href=i.url;
-  a.textContent=i.label;
-  links.appendChild(a);
+  a.href=item.url;
+  a.innerHTML=`<span>${item.label}</span>`;
+  linksContainer.appendChild(a);
 });
 
-/* WORK */
-CONFIG.myWork.forEach(w=>{
-  workContent.innerHTML+=`
-  <div class="mywork-item">
-    <img src="${w.image}" class="mywork-image">
+/* GENERATE MY WORK ITEMS */
+const workContent = document.getElementById("workContent");
+CONFIG.myWork.forEach(item=>{
+  const div = document.createElement("div");
+  div.className="mywork-item";
+  div.innerHTML=`
+    <img src="${item.image}" alt="Server Discord" class="mywork-image">
     <div class="mywork-desc">
-      <div><strong>Nama:</strong> ${w.name}</div>
-      <div><strong>Owner:</strong> ${w.owner}</div>
-      <div><strong>Date:</strong> ${w.date}</div>
+      <div class="mywork-name"><strong>Nama Server:</strong> ${item.name}</div>
+      <div class="mywork-owner"><strong>Owner:</strong> ${item.owner}</div>
+      <div class="mywork-date"><strong>Dibuat:</strong> ${item.date}</div>
     </div>
-  </div>`;
+  `;
+  workContent.appendChild(div);
 });
 
-/* OVERLAY */
-const [about,work,social]=document.querySelectorAll(".link");
-about.onclick=e=>{e.preventDefault();aboutBox.classList.add("active")}
-work.onclick=e=>{e.preventDefault();workBox.classList.add("active")}
-social.onclick=e=>{e.preventDefault();socialBox.classList.add("active")}
-document.querySelectorAll(".close-trigger").forEach(c=>c.onclick=e=>e.target.parentElement.classList.remove("active"));
+/* CURSOR */
+const cursor = document.querySelector(".cursor");
+let mouseX=0, mouseY=0, currentX=0, currentY=0;
+document.addEventListener("mousemove", e=>{
+  mouseX=e.clientX; mouseY=e.clientY;
+});
+function animateCursor(){
+  currentX += (mouseX - currentX) * 0.15;
+  currentY += (mouseY - currentY) * 0.15;
+  cursor.style.left=currentX+"px";
+  cursor.style.top=currentY+"px";
+  requestAnimationFrame(animateCursor);
+}
+animateCursor();
 
-/* LOADING */
-let w=0;
-const bar=document.getElementById("loadingBar");
-const iv=setInterval(()=>{w+=1.5;bar.style.width=w+"%";if(w>=100)clearInterval(iv)},30);
+/* BUTTON HOVER */
+document.querySelectorAll(".link").forEach(btn=>{
+  btn.addEventListener("mouseenter",()=>{
+    btn.classList.add("hover"); 
+    cursor.classList.add("magnify");
+  });
+  btn.addEventListener("mouseleave",()=>{
+    btn.classList.remove("hover"); 
+    btn.classList.remove("zoom-text"); 
+    cursor.classList.remove("magnify");
+  });
+});
+
+/* OVERLAY LOGIC */
+const aboutBtn = document.querySelectorAll(".link")[0];
+const workBtn  = document.querySelectorAll(".link")[1];
+const socialBtn = document.querySelectorAll(".link")[2];
+const aboutBox = document.getElementById("aboutBox");
+const workBox  = document.getElementById("workBox");
+const socialBox = document.getElementById("socialBox");
+
+aboutBtn.addEventListener("click", e=>{ e.preventDefault(); aboutBox.classList.add("active"); });
+workBtn.addEventListener("click", e=>{ e.preventDefault(); workBox.classList.add("active"); });
+socialBtn.addEventListener("click", e=>{ e.preventDefault(); socialBox.classList.add("active"); });
+
+document.querySelectorAll(".close-trigger").forEach(trigger=>{
+  trigger.addEventListener("click", e=>{
+    const box = e.currentTarget.parentElement;
+    box.classList.remove("active");
+    if(box.id === "workBox") workContent.scrollTop = 0;
+  });
+});
+document.querySelectorAll(".box-content").forEach(box=> box.addEventListener("click", e=> e.stopPropagation()));
+
+/* LOADING SCREEN 6 DETIK */
+const loadingScreen = document.getElementById("loadingScreen");
+const loadingBar = document.getElementById("loadingBar");
+let width = 0;
+const totalTime = 6000; // 6 detik
+const intervalTime = 30;
+const increment = 100 / (totalTime / intervalTime);
+
+const loadingInterval = setInterval(()=>{
+  width += increment;
+  if(width >= 100) width = 100;
+  loadingBar.style.width = width + "%";
+}, intervalTime);
+
 setTimeout(()=>{
-  loadingScreen.style.opacity=0;
-  setTimeout(()=>{loadingScreen.remove();document.querySelector(".container").classList.add("show")},500);
-},6000);
+  clearInterval(loadingInterval);
+  loadingScreen.style.opacity = 0;
+  setTimeout(()=>{
+    loadingScreen.style.display = "none";
+    document.querySelector(".container").classList.add("show");
+  }, 500);
+}, totalTime);
+
 </script>
 
 </body>
