--- a/index.html
+++ b/index.html
@@ -245,17 +245,34 @@ footer{margin-top:18px;font-size:.75rem;color:#64748b;}
 <div class="paper-box" id="aboutBox">
   <div class="close-trigger"></div>
   <div class="box-content">
-    <div class="avatar-wrapper"><div class="avatar"></div></div>
-    <h1 id="about-name"></h1>
-    <p id="about-tagline"></p>
-    <div class="bio-description">
-      Hawrru~! I'm Foruxy, the Silver Catfox~<br>
-      I create Vtuber Discord servers, manage Vtuber communities, and moderate YouTube channels!<br>
-      I also help as a Vtuber Advisor, Counselor, and Helper.<br>
-      I began my journey since February 2025, I’m dedicated to supporting Vtubers and growing communities with creativity and care.<br>
+
+    <div class="about-layout">
+
+      <!-- LEFT : AVATAR -->
+      <div class="about-avatar">
+        <div class="avatar-wrapper">
+          <div class="avatar"></div>
+        </div>
+      </div>
+
+      <!-- RIGHT : TEXT -->
+      <div class="about-text">
+        <h1 id="about-name"></h1>
+        <p id="about-tagline"></p>
+
+        <div class="bio-description">
+          Hawrru~! I'm Foruxy, the Silver Catfox~<br>
+          I create Vtuber Discord servers, manage Vtuber communities, and moderate YouTube channels!<br>
+          I also help as a Vtuber Advisor, Counselor, and Helper.<br>
+          I began my journey since February 2025, I’m dedicated to supporting Vtubers and growing communities with creativity and care.<br>
+        </div>
+      </div>
+
     </div>
+
   </div>
 </div>
+
 
 
 <div class="paper-box" id="workBox">
@@ -412,7 +429,35 @@ setTimeout(()=>{
     document.querySelector(".container").classList.add("show");
   }, 500);
 }, totalTime);
+/* ===============================
+   ABOUT ME - IMAGE LEFT TEXT RIGHT
+   =============================== */
 
+.about-layout{
+  display:flex;
+  gap:24px;
+  align-items:flex-start;
+}
+
+.about-avatar{
+  flex-shrink:0;
+}
+
+.about-text{
+  text-align:left;
+}
+
+@media (max-width: 600px){
+  .about-layout{
+    flex-direction:column;
+    align-items:center;
+  }
+  .about-text{
+    text-align:left;
+  }
+}
+
+  
 </script>
 
 </body>
